--- a/views/home.ejs
+++ b/views/home.ejs
@@ -106,7 +106,7 @@
                 <div class="recipe-item col-md-6">
                     <img src="<%= images[i] %>" alt="" <a class="source" href="http://<%= sources[i] %>">
                     <%= sources[i] %></a>
-                    <a href="/search/<%= ids[i].id %>">
+                    <a href="<%= urls[i] %>">
                         <%= titles[i] %> 
                     </a>
                     
