--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,121 +1,126 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <title>
-        <%= query %> - NewsJS
-
-    </title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <title> <%= query %> - NewsJS </title>
     <style>
-        /* styles.css */
-        .recipe-item {
-            margin-bottom: 10px;
-            /* Add some space between each recipe item */
-            width: calc(33.33% - 20px);
-            /* Set width to 1/3 of the container width */
-            float: left;
-            /* Float items to the left */
-            margin-right: 20px;
-            /* Add some space between items */
-            border: 2px solid black;
-            padding: 10px;
-            /* Add padding to the container */
-            /* border-radius: 10px; */
-            box-sizing: border-box;
-            /* Include padding and border in the total width */
-        }
+ 
+body {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    margin: 0;
+    padding: 0;
+}
+ul {
+    list-style: none;
+    padding-left: 0;
+}
 
-        .recipe-item img {
-            width: 100%;
-            /* Make the image fill the container width */
-            height: auto;
-            /* Maintain aspect ratio */
-            max-height: calc(16rem - 20px);
-            /* Set maximum height to fit inside the container */
-            margin-bottom: 2px;
-            /* Add some space below the image */
-        }
+header {
+    background-color: #dc3545;
+    color: white;
+    padding: 20px;
+    text-align: center;
+    font-size: 24px;
+    font-weight: bold;
+}
 
-        /* Clear the float after every third item */
-        .recipe-item:nth-child(3n+3) {
-            margin-right: 0;
-            /* Remove margin on the third item of each row */
-        }
 
-        /* Clear the float after every row */
-        .recipe-item:nth-child(3n+4) {
-            clear: both;
-            /* Move to the next line */
-        }
+form {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 20px;
+    margin-top: 20px;
+}
+input[type="text"] {
+    padding: 8px;
+    border: 2px solid #ccc;
+    border-radius: 5px;
+    font-size: 16px;
+    width: 300px;
+    margin-right: 10px;
+    margin-top: 5px;
+}
+button {
+    padding: 8px 16px;
+    background-color: #dc3545;
+    border: none;
+    border-radius: 5px;
+    color: white;
+    font-size: 16px;
+    cursor: pointer;
+    margin-top: 5px;
+}
+button:hover {
+    background-color: #dc3545;
+}
 
-        a {
-            text-decoration: underline;
-            color: black;
-            font-size: 18px;
-            font-weight: 600;
-            display: block;
-        }
+.recipe-item {
+    margin-bottom: 10px;
+    width: calc(33.33% - 20px);
+    float: left;
+    margin-right: 20px;
+    border: 2px solid black;
+    padding: 10px;
+    box-sizing: border-box;
+    transition: 4ms ease-in-out;
+}
+.recipe-item img {
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+    border-bottom: 1px solid #ddd;
+}
+.recipe-item:nth-child(3n+3) {
+    margin-right: 0;
+}
+.recipe-item:nth-child(3n+4) {
+    clear: both;
+}
+a {
+    color: black;
+    font-size: 18px;
+    font-weight: 600;
+    display: block;
+}
+.source {
+    text-decoration: none;
+    color: black;
+    display: block;
+}
 
-        body {
-            font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-        }
+.recipe-item:hover {
+    transform: translateY(-5px);
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
+}
 
-        ul {
-            list-style: none;
-            padding-left: 0;
-        }
-
-        p {
-            color: black;
-            font-size: 16px;
-            font-weight: 600;
-            margin-bottom: 2px;
-        }
-
-        .source {
-            text-decoration: none;
-            color: black;
-            display: block;
-        }
-
-        form {
-            width: 80%;
-            display: flex;
-        }
-        
+.source:hover {
+    color: #555;
+}
 
     </style>
 </head>
-
 <body>
-    <form action="/search" class="search" method="GET">
-
-        <input type="text" name="query" placeholder="Search" class="search__field">
-        <button type="submit">Submit</button>
-    
-
+    <header>NewsJS</header>
+    <form action="/search" method="GET">
+        <input type="text" name="query" placeholder="Search" autocomplete="off"> 
+        <button type="submit">Search</button>
     </form>
-
+  
     <div class="container">
         <ul>
             <% for(let i=0; i<titles.length; i++) { %>
-                <div class="recipe-item col-md-6">
-                    <img src="<%= images[i] %>" alt="" <a class="source" href="http://<%= sources[i] %>">
-                    <%= sources[i] %></a>
-                    <a href="<%= urls[i] %>">
-                        <%= titles[i] %> 
-                    </a>
-                    
-                    
-                </div>
-                <% } %>
+            <div class="recipe-item">
+                <img src="<%= images[i] %>" alt="">
+                <a class="source" href="http://<%= sources[i] %>"><%= sources[i] %></a>
+                <a href="<%= urls[i] %>"><%= titles[i] %></a>
+            </div>
+            <% } %>
         </ul>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-</body>
 
+</body>
 </html>
+
+
+
